 starter-device.h          Locally Modified          397 

Directory modules/leap/build-support/project
 project-hybrid-main.cpp   Locally Modified          397 

Directory modules/leap/libraries/platform-services/common-services/stdio-service
 stdio-service.cpp         Locally Modified          397 
 stdio-local.bsv           Locally Modified          397 
 stdio-service.rrr         Locally Modified          397 
 stdio-service.h           Locally Modified          397 
 stdio-service.bsv         Locally Modified          397 

Directory modules/leap/libraries/soft-services/services/soft-connections
 addressable-ring.bsv      Locally Modified          397 

Directory modules/leap/examples/hello-world
 hello-world.bsv           Locally Modified          397 

- STDIO service now flushes all outstanding requests automatically as part of
  the exit sequence.  Removed sync_req and sync_rsp from the interface.
  Hello world is thus reduced to one rule instead of three.

- Addressable rings now compute the maximum ring ID of all attached nodes.
  For rings where the only statically assigned ID is the primary node (id=0),
  the node with the maximum ID will be the one immediately preceding the
  primary node.

----------
mcadler     Date: Wed Feb 27 11:07:26 EST 2013  CSN: CSN-leap-399
                  Wed Feb 27 16:07:26 UTC 2013


Directory modules/leap/libraries/platform-services/common-services/stdio-service
 stdio-service.cpp         Locally Modified          398 
 stdio-local.bsv           Locally Modified          398 
 stdio-service.h           Locally Modified          398 

Put back sync_req/sync_rsp but add change the description because it
is now optional.

----------
kfleming    Date: Sat Mar  2 13:37:10 EST 2013  CSN: CSN-leap-400
                  Sat Mar  2 18:37:10 UTC 2013


Directory modules/leap/build-support/project
 project-hybrid-main.bsv   Locally Modified          399 


Them that use Vector should also include Vector.